// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Menu - snapshots Menu advanced mode, online 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
        "fontWeight": "400",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.info"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.walletseedufvk"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.rescan"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.syncreport"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.fundpools"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.insight"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.changewallet"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.votefornym"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "paddingBottom": 0,
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#888888",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 32,
            "resizeMode": "contain",
            "width": 32,
          }
        }
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "bold",
            "marginLeft": 10,
          }
        }
      >
        Zingo 
        <Text
          style={
            {
              "color": "#18bd18",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          text translated
        </Text>
      </Text>
      <
        color="#888888"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9002,
              ],
              "f054",
              "M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z",
            ],
            "iconName": "chevron-right",
            "prefix": "fas",
          }
        }
        size={18}
      />
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginBottom": 12,
          "marginTop": 12,
        }
      }
    >
      Version: 
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        text translated
      </Text>
    </Text>
  </View>
</View>
`;

exports[`Menu - snapshots Menu basic mode, no value transfers 1`] = `
<View
  style={
    {
      "alignItems": "stretch",
      "backgroundColor": "#040C17",
      "flex": 1,
    }
  }
>
  <Text
    style={
      {
        "color": "#ffffff",
        "fontSize": 15,
        "fontWeight": "400",
        "marginLeft": 30,
        "marginVertical": 10,
        "opacity": 1,
      }
    }
  >
    text translated
  </Text>
  <View
    style={
      {
        "backgroundColor": "#18bd18",
        "height": 1,
      }
    }
  />
  <View
    style={
      {
        "display": "flex",
        "marginLeft": 20,
      }
    }
  >
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.about"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.addressbook"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.loadwalletfromseed"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
      testID="menu.tipzingolabs"
    >
      text translated
    </Text>
    <Text
      onPress={[Function]}
      style={
        {
          "color": "#c3c3c3",
          "fontSize": 14,
          "fontWeight": "400",
          "opacity": 1,
          "paddingTop": 25,
        }
      }
    >
      text translated
    </Text>
  </View>
  <View
    style={
      {
        "backgroundColor": "#040C17",
        "paddingBottom": 0,
        "paddingHorizontal": 15,
        "paddingTop": 10,
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "borderColor": "#888888",
          "borderRadius": 10,
          "borderWidth": 1,
          "flexDirection": "row",
          "opacity": 1,
          "padding": 10,
        }
      }
    >
      <Image
        source={
          {
            "testUri": "../../../assets/img/logobig-zingo.png",
          }
        }
        style={
          {
            "borderRadius": 8,
            "height": 32,
            "resizeMode": "contain",
            "width": 32,
          }
        }
      />
      <Text
        style={
          {
            "color": "#c3c3c3",
            "flex": 1,
            "fontSize": 18,
            "fontWeight": "bold",
            "marginLeft": 10,
          }
        }
      >
        Zingo 
        <Text
          style={
            {
              "color": "#18bd18",
              "fontSize": 14,
              "fontWeight": "bold",
            }
          }
        >
          text translated
        </Text>
      </Text>
      <
        color="#888888"
        icon={
          {
            "icon": [
              320,
              512,
              [
                9002,
              ],
              "f054",
              "M311.1 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L243.2 256 73.9 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z",
            ],
            "iconName": "chevron-right",
            "prefix": "fas",
          }
        }
        size={18}
      />
    </View>
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 8,
          "marginBottom": 12,
          "marginTop": 12,
        }
      }
    >
      Version: 
      <Text
        style={
          {
            "color": "#5a8c5a",
          }
        }
      >
        text translated
      </Text>
    </Text>
  </View>
</View>
`;
